crates/pgls_pretty_print/tests/snapshots/single/tests__index_stmt_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/index_stmt_0.sql
snapshot_kind: text
---
CREATE INDEX "idx_users_email" ON users USING btree (email);
