crates/pgls_pretty_print/tests/snapshots/single/tests__insert_with_cte_returning_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/insert_with_cte_returning_0_100.sql
snapshot_kind: text
---
WITH src AS (SELECT 1 AS id, 'alpha' AS name)
INSERT INTO audit.log (id, name)
SELECT id, name FROM src
RETURNING id,
name;
