crates/pgls_pretty_print/tests/snapshots/single/tests__into_clause_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/into_clause_0_100.sql
snapshot_kind: text
---
SELECT * INTO new_table FROM old_table;
